Closed Bug 1060976 Opened 11 years ago Closed 11 years ago

Fix more bad implicit constructors in the JS engine

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla35

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

References

Details

Attachments

(1 file, 1 obsolete file)

No description provided.
Assignee: nobody → ehsan.akhgari
Blocks: explicit
Attachment #8481990 - Flags: review?(jorendorff)
Attachment #8481990 - Attachment is obsolete: true
Attachment #8481990 - Flags: review?(jorendorff)
Comment on attachment 8483239 [details] [diff] [review] Fix more bad implicit constructors in the JS engine; r=jorendorff Fixed one more of these which crept in while this is waiting for review...
Attachment #8483239 - Flags: review?(jorendorff)
Attachment #8483239 - Flags: review?(jorendorff) → review+
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
Flags: qe-verify-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: