Bug 1060976 - Fix more bad implicit constructors in the JS engine; r=jorendorff